--- a/style.css
+++ b/style.css
@@ -29,6 +29,60 @@ body {
     float: right;
 
 }
+.design3 {
+    background-image: url("img/dots-group-cyan.png");
+    padding:60px 60px 100px 60px;
+    background-repeat: no-repeat;
+    position: relative;
+    top:900px;
+    left:50px;
+
+}
+.design4 {
+    background-image: url("img/dots-group-v.png");
+    padding:60px 60px 100px 60px;
+    position:relative;
+    top:30px;
+    background-repeat: no-repeat;
+    float: right;
+
+}
+.design5 {
+    background-image: url("img/dots-group-v.png");
+    padding:60px 60px 100px 60px;
+    position:relative;
+    top:250px;
+    background-repeat: no-repeat;
+    float: right;
+
+}
+.design6 {
+    background-image: url("img/dots-group-cyan.png");
+    padding:60px 60px 100px 60px;
+    background-repeat: no-repeat;
+    position: relative;
+    top:910px;
+    left:150px;
+
+}
+.design7 {
+    background-image: url("img/dots-group-v.png");
+    padding:60px 60px 100px 60px;
+    background-repeat: no-repeat;
+    position: relative;
+    top:360px;
+    left:50px;
+
+}
+.design8 {
+    background-image: url("img/dots-group-v.png");
+    padding:60px 60px 100px 60px;
+    position:relative;
+    top:55px;
+    background-repeat: no-repeat;
+    float: right;
+
+}
 .top-wrapper h1 {
     opacity:1.0;
     position:relative;
@@ -53,7 +107,49 @@ body {
 }
 .About {
     background-image: url("img/newsletter-bg.jpg");
-    padding:300px 10px 50px 300px;
+    padding:30px 10px 50px 30px;
+    height:500px;
+    margin-top:5px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+    
+}
+.about-title{
+    font-family: "Times New Roman";
+    font-size:30px;
+    padding:30px 20px 40px 20px;
+    margin-left:600px;
+    background-image: url("img/next-events-header-bg.png");
+    background-repeat: no-repeat;
+    align-items: center;
+    color:white;
+}
+.about-content {
+    float: left;
+    padding:40px 20px 20px 40px;
+    font-size:30px;
+    margin-top:40px;
+    margin-left: 50px;
+    
+}
+.fa {
+    background-color:rgb(47, 166, 196);
+    border-radius:65px;
+    padding:10px 10px 10px 10px;
+}
+
+.about-content p {
+    font-size:20px;
+    color:white;
+    opacity:0.7;
+    text-align: center;
+
+}
+.about-content h4 {
+   opacity:0.7;
+    color:white;
+
 }
 .project {
     padding-top: 20px;
