--- a/style.css
+++ b/style.css
@@ -127,10 +127,10 @@ body {
 }
 .about-content {
     float: left;
-    padding:40px 20px 20px 40px;
+    padding:20px 90px 20px 90px;
     font-size:30px;
-    margin-top:40px;
-    margin-left: 50px;
+    margin:20px 40px 20px 40px;
+    
     
 }
 .fa {
@@ -144,6 +144,7 @@ body {
     color:white;
     opacity:0.7;
     text-align: center;
+    width:100px;
 
 }
 .about-content h4 {
